--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "css-loader": "^6.8.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
