--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "ts-loader": "^9.5.1",
